fix  on mobile

--- a/src/sass/global/_articles.scss
+++ b/src/sass/global/_articles.scss
@@ -4,7 +4,29 @@
 		flex-direction: row;
 		@include media-breakpoint-down(sm){
 			flex-direction: column;
+			overflow: hidden;
+			position: relative;
+			.box-label{
+				width: 100%;
+				align-items: center;
+				right: -5px;
+				left: -5px;
+				background: $dark;
+				text-transform: uppercase;
+				color: $white;
+				font-size: 1.313rem;
+				line-height: 1.313rem;
+				padding: .5rem 0;
+				text-align: center;
+				top: 0;
+			}
 		}
+	}
+	.bor{
+		@include media-breakpoint-down(sm){
+			border: 0 !important;
+		}
+
 	}
 	.tab-content{
 		overflow: hidden;
@@ -45,6 +67,14 @@
 			height: 45px;
 			overflow: hidden;
 			font-size: .8rem;
+			background: $white;
+			&:nth-child(2n+1){
+				background: #f1f1f1;
+			}
+			&:active,
+			&.active{
+				background: $primary;
+			}
 		}
 		span{
 			position: relative;
